--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,12 @@
 .import/
 export.cfg
 export_presets.cfg
+gdnative/.sconsign.dblite
+gdnative/src/handeval.os
 
 # Imported translations (automatically generated from CSV files)
 *.translation
 
 # Editors
 .vscode
+
